# AbrasionDetection_GUI

./: .gitignore  README.md  index.html  package.json
src/: App.css  App.tsx  DataAnalysis.tsx  RealTime.tsx  main.tsx  theme.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  serial.rs  sqlite.rs
