[package]
name = "abrasiondetection_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "abrasiondetection_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-serial = "5.4.5"
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = { version = "0.4.40", features = ["serde"] }
umya-spreadsheet = "2.2.3"
tokio-util = { version = "0.7.16", features = ["full"] }
futures = "0.3.31"
tauri-plugin-dialog = "2"
